traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:0: error: not found: type int
class TraversalByColumn extends SimpleBuggle {def getMondeHauteur():int = {
                                                                    ^TraversalByColumn:16: error: type mismatch;
 found   : Unit
 required: Int
def getMondeLargeur() = {
                        ^