traversal.column.traversalbycolumn.TraversalByColumn.scala.code
def getMondeHauteur():int = {
  var a=0
  droite()
  droite()
  while (!estFaceMur()) {
    avance()
    a=a+1
  }
	droite()
  droite()
  setPos(0, 0)
  return a

}


def getMondeLargeur() = {
  
}








override def run() {
}